--- a/sass/index.html
+++ b/sass/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+<title>Dashboard</title>
 <body>
 
   <!-- <div id="TextBefore">
@@ -26,3 +27,4 @@
 
 </body>
 </html>
+
